2005-02-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* include/.cvsignore: Removed.
	* intl/.cvsignore: Removed.
	* macros/* Removed.
	* macros/ax_compare_version.m4: Added.

2005-02-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* roadster.desktop.in:
	* roadster.glade:
	* roadster.glade.scrap: Moved to new data directory.
	* intl/*: Removed.
	* include/Makefile.am: Removed.
	* configure.in: Removed.

2005-02-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* Header files actually removed from include/.  Phew!

2005-02-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* configure.ac: Added.
	* Header files actually moved.

2005-02-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* Major build file cleanup by Nathan Fredrickson <nathan@silverorange.com>
	* All header files moved into src/
	* configure: Check for mysql and gpsd.

2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* main.c: Added call to init scenemanager. 
	* scenemanager.c: Added quasi-hack to prevent road/label names from showing up twice on one screen.
	* map.c: Request permission from scenemanager before drawing a label.

2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* import_tiger.c: Removed some debug output.

2005-02-22  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* import_tiger.c: Added extracting of polygon labels.
	* map.c: Added polygon label drawing.

2005-02-22  Carl Worth  <cworth@cworth.org>

	* configure.in:
	* include/databasewindow.h:
	* include/datasetwindow.h:
	* include/db.h:
	* include/geometryset.h:
	* include/gotowindow.h:
	* include/gpsclient.h:
	* include/gui.h:
	* include/import.h:
	* include/importwindow.h:
	* include/layers.h:
	* include/locationset.h:
	* include/mainwindow.h:
	* include/map.h:
	* include/scenemanager.h:
	* include/searchwindow.h:
	* include/util.h:
	* include/welcomewindow.h:
	* src/Makefile.am:
	* src/databasewindow.c: (databasewindow_connect),
	(databasewindow_on_connectbutton_clicked):