@@ -22,7 +22,7 @@ dnl AC_PROG_RANLIB
 AC_PROG_LIBTOOL
 AC_PROG_INTLTOOL
 
-GNOME_DEBUG_CHECK
+dnl GNOME_DEBUG_CHECK
 
 ALL_LINGUAS=""
 
